# lattice-watering

./: .clang-format  .gitignore  HWSETUP.md  LICENSE.txt  METHODS.md  README  README.md  ROUTES.md  gen_keys.sh  justfile  package-lock.json  package.json  riotos_update.sh
br/: Makefile  README.md  main.c
cert/: private.der  public.pem
doc/first-status-report/: first-status-report.fdb_latexmk  first-status-report.fls  first-status-report.tex  first_status_report.tex
doc/presentation/: presentation.tex
doc/report/: report.aux  report.bbl  report.bcf  report.bib  report.bib.bak  report.blg  report.fdb_latexmk  report.fls  report.lof  report.tex
doc/second-status-report/: second-status-report.tex  second-status-report.vrb
doc/third-status-report/: third-status-report.tex
documents/first-status-report/: first-status-report.tex
firmware/: Makefile  main.c
front/: .gitignore  README.md  db.js  justfile  package-lock.json  package.json  request_with_payload.js  routes.js  server.js  style.css  test.js
frontend/: app.js  index.html  package-lock.json  plant_lib.sql  plants.sql  routes.js  server.js  style.css
fw/: Makefile  Makefile.vars  README.md  cred.h  justfile  main.c  main.h  psk_key.h
misc/: NOTES  concept-sketch.xoj  oldjustfile  test.c
myExpressApp/: app.js  package-lock.json
proxy/: Cargo.toml  Makefile  README.md  cred.conf  justfile  main.c
proxy/cred/: cert.pem  private.der  private.pem  public.der  public.pem  summary.txt
proxy/src/: cred.rs  main.rs  psk_key.rs
psk/: psk_key
sensor/: Makefile  main.c
test/: test  test.c
(+21 files in other folders)
