[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor = "0.4.1"
coap = "0.12.0"
libc = "0.2.126"
tinydtls-sys = { version = "0.1.1", features = ["psk"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
